--- a/DNNcpp.vcxproj.filters
+++ b/DNNcpp.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="cudaIntellisense.hpp">
       <Filter>소스 파일\.cu</Filter>
     </ClInclude>
+    <ClInclude Include="perceptron.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="cudaKernal.cu">
